[package]
name = "rs-tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
scryfall = "0.13.4"
tokio = { version = "1.28.2", features = ["full"] }
